<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            card_view:cardCornerRadius="8dp"
            card_view:contentPadding="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                android:id="@+id/textNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/textAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bookingavailable"
                android:layout_marginBottom="10dp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="20 April 2017" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="21 April 2017" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="22 April 2017" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="23 April 2017 " />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="24 April 2017" />
            </RadioGroup>
</LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            card_view:cardCornerRadius="8dp"
            card_view:contentPadding="8dp"
            android:layout_marginTop="8dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_plat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_plat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plat"
                android:layout_margin="8dp" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>


        <TextView
            android:text="@string/bookingnotavailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@color/colorPrimary"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <Button
            android:text="@string/book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBooking"
            android:background="@drawable/buttonstyle"
            android:textColor="@android:color/white"/>


    </LinearLayout>
</ScrollView>